Fixed header alignment when table size is bigger than window size

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,8 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-
-
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: monospace, sans-serif;
   margin: 0;
   padding: 0;
   /*font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;*/
