--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,10 +3,10 @@
   position: relative;
 }
 
-.AwesomeTable__header-row {
+.AwesomeTable_header {
   z-index: 2;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
   background: white;
+  border-bottom: 1px solid rgb(100, 100, 100);
 }
 
 .AwesomeTable__header-row-cell {
@@ -16,7 +16,7 @@
   padding: 0 10px;
   cursor: pointer;
   font-weight: bold;
-  border-right: 1px solid #EBEBEB;
+  border-right: 1px solid rgb(160, 160, 160);
 }
 
 .AwesomeTable__header-row-cell:last-child {
@@ -37,17 +37,17 @@
 
 .AwesomeTable__body-row {
   width: fit-content;
-  border-bottom: 1px solid rgba(150, 150, 150, 0.2);
+  border-bottom: 1px solid rgb(160, 160, 160);
   cursor: pointer;
 }
 
 .AwesomeTable__body-row.odd {
-  background-color: rgba(112, 128, 144, 0.1);
+
 }
 
 
 .AwesomeTable__body-row:hover {
-  background-color: rgba(78, 121, 148, 0.49);
+  background-color: rgba(112, 128, 144, 0.1);
 }
 
 .AwesomeTable__body-cell:last-child {
@@ -58,7 +58,7 @@
 .AwesomeTable__body-cell {
   display: flex;
   align-items: center;
-  border-right: 1px solid rgba(150, 150, 150, 0.2);
+  border-right: 1px solid rgb(160, 160, 160);
 }
 
 
